Admin Login Added

--- a/css/layouts/side-menu.css
+++ b/css/layouts/side-menu.css
@@ -246,3 +246,9 @@ Hides the menu at `48em`, but modify this based on your app's needs.
     }
 }
 
+.admin {
+  text-align: center;
+  position: fixed;
+  top: 75%;
+ left: 45%;
+}
